--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Affluent developer challenge",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,18 @@
   "bugs": {
     "url": "https://github.com/bhflm/affluent/issues"
   },
-  "homepage": "https://github.com/bhflm/affluent#readme"
+  "homepage": "https://github.com/bhflm/affluent#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.0.0",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.4",
+    "pino": "^6.2.1",
+    "pino-pretty": "^4.0.0",
+    "prettier": "^2.0.5",
+    "puppeteer": "^3.1.0",
+    "util": "^0.12.3"
+  }
 }
