--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon app.js",
+    "lint-c": "eslint \"**/*.js\"",
+    "lint-fix": "eslint server --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,16 +20,28 @@
   },
   "homepage": "https://github.com/bhflm/affluent#readme",
   "dependencies": {
+    "babel-eslint": "^10.1.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "eslint": "^7.0.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
     "pino": "^6.2.1",
-    "pino-pretty": "^4.0.0",
-    "prettier": "^2.0.5",
     "puppeteer": "^3.1.0",
     "util": "^0.12.3"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "eslint": "^7.0.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "install": "^0.12.2",
+    "jest": "^24.9.0",
+    "npm": "^6.9.0",
+    "pino-pretty": "^4.0.0",
+    "prettier": "1.16.4"
   }
 }
