--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Affluent developer challenge",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon app.js",
+    "dev": "nodemon server.js",
     "lint-c": "eslint \"**/*.js\"",
-    "lint-fix": "eslint server --fix",
+    "lint-fix": "eslint app --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/bhflm/affluent#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "babel-eslint": "^10.1.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
