--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^8.2.0",
     "eslint-plugin-prettier": "^3.1.3",
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
     "pino": "^6.2.1",
     "puppeteer": "^3.1.0",
