--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.1.0",
     "nodemon": "^2.0.4",
     "pino": "^6.2.1",
     "puppeteer": "^3.1.0",
